@@ -13,6 +13,13 @@ tbd  Sun Microsystems, Inc.
         removed cwd "./" (refer to Bugzilla 14399).
 
 Severity   : normal
+Bugzilla   : 15825
+Description: Kernel BUG tries to release flock
+Details    : Lustre does not destroy flock lock before last reference goes
+             away. So always drop flock locks when client is evicted and 
+	     perform unlock regardless of successfulness of speaking to MDS.
+
+Severity   : normal
 Bugzilla   : 15210
 Description: add recount protection for osc callbacks, so avoid panic on shutdown
 
